Cookie cliker finish

--- a/8. En selle/5. Cookie clicker/assets/css/style.css
+++ b/8. En selle/5. Cookie clicker/assets/css/style.css
@@ -5,3 +5,11 @@ body {
     align-items: center;
     flex-flow: wrap column;
 }
+
+button {
+    padding: 20px 50px;
+}
+
+.cookie {
+    margin: 30px;
+}
