--- a/8. En selle/5. Cookie clicker/assets/css/style.css
+++ b/8. En selle/5. Cookie clicker/assets/css/style.css
@@ -4,12 +4,60 @@ body {
     justify-content: center;
     align-items: center;
     flex-flow: wrap column;
+    font-family: 'Raleway', sans-serif;
+    background: #d8a371;
 }
 
-button {
-    padding: 20px 50px;
+.title {
+    font-size: 50px;
+    padding: 10px 20px;
+    border: 4px solid #000;
 }
 
 .cookie {
     margin: 30px;
 }
+
+#nbCookie {
+    font-size: 40px;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 24px;
+}
+
+#clicker {
+    font-size: 80px;
+    color: #a07751;
+    padding: 4px 10px;
+    background: #e6af7b;
+    border: 4px solid #a07751;
+    border-radius: 500px;
+    outline: none;
+}
+
+#clicker:active {
+    transform: scale(1.05);
+}
+
+.btn {
+    padding:20px 60px;
+    outline: none;
+    background-color: #12a15a;
+    border: none;
+    border-radius:5px;
+    box-shadow: 0 9px #0b5832;
+    color: #fff;
+  }
+  
+  .btn:active {
+    background-color: #12a15a;
+    box-shadow: 0 5px #0b5832;
+    transform: translateY(4px);
+  }
+
+  .btn:disabled {
+    background-color: #cf361b;
+    box-shadow: 0 9px #772011;
+  }
