--- a/8. En selle/5. Cookie clicker/assets/css/style.css
+++ b/8. En selle/5. Cookie clicker/assets/css/style.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0;
+    padding: 0;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -31,7 +33,7 @@ button {
     font-size: 80px;
     color: #a07751;
     padding: 4px 10px;
-    background: #e6af7b;
+    background: #cc9868;
     border: 4px solid #a07751;
     border-radius: 500px;
     outline: none;
